# translator

./: .env.example  .gitignore  Pipfile  Pipfile.toml  README.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.py
app/: main.py
app/config/: config.py
app/domain/: business_rules_chargeable.py  business_rules_domain.py  df_functions.py
app/services/: processor.py  sql_generator.py
app/utils/: strings.py
output/: insert_into_chargeable.sql  insert_into_domains.sql  itemcount_nonpositive_error_df.csv  no_partnumber_error_df.csv  running_totals_df.csv  totals_by_product.csv
src/translator/: main.py
tests/: business_rules_chargeable_test.py  business_rules_domain_test.py  df_functions_test.py  processor_test.py  sql_generator_test.py  strings_test.py  test_utils.py
